# fot-intervention-recommender

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/processed/: citations.json  knowledge_base_final_chunks.json  knowledge_base_raw.json
docs/: document_complexity_map.csv  implementation_log.md  implementation_plan.md  initial_plan.md  project_plan_and_design.md  research_plan.md
notebooks/: fot_recommender_poc.ipynb
scripts/: build_knowledge_base.py
src/demo_application/: main.py
src/fot_recommender/: __init__.py  config.py  knowledge_base.py  main.py  manual_extractions.py  prompts.py  rag_pipeline.py  semantic_chunker.py  utils.py
tests/: test_chunking.py  test_main.py  test_pipeline.py
