[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demo_application"
version = "0.1.0"
description = "Demo application for technical interview"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "setuptools>=80.9.0",
]

[project.scripts]
demo-app = "demo_application.main:main"

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"